--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -1,5 +1,3 @@
----
-
 name: Build a package with Melange
 
 on:
@@ -8,8 +6,7 @@ on:
       - main
   workflow_dispatch:
   schedule:
-    # run every Monday at 01:30
-    - cron: '30 1 * * 1'
+    - cron: '30 1 * * 1' # Every Monday at 01:30
 
 env:
   REGISTRY: ghcr.io
@@ -24,6 +21,7 @@ jobs:
       packages: write
       attestations: write
       id-token: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -44,33 +42,40 @@ jobs:
         uses: chainguard-dev/actions/melange-build-pkg@main
         with:
           config: melange-package.yml
-          archs: x86_64
+          archs: x86_64,arm64
           sign-with-key: true
 
-      # https://github.com/chainguard-images/actions/tree/main/apko-publish
       - name: Build image with Apko
         uses: chainguard-images/actions/apko-publish@main
         with:
           config: melange-image.yaml
           tag: ghcr.io/duyne-me/wolfi-melange:latest
 
-      - name: Install crane
+      # Set image variables for reuse
+      - name: Set image metadata
+        id: vars
         run: |
-          mkdir -p /usr/local/bin
-          curl -L -o crane.tar.gz https://github.com/google/go-containerregistry/releases/latest/download/crane-linux-amd64.tar.gz
-          tar -xzf crane.tar.gz crane
-          chmod +x crane
-          mv crane /usr/local/bin/crane
-          
-      - name: Get image digest
-        id: digest
-        run: |
-          DIGEST=$(crane digest ghcr.io/duyne-me/wolfi-melange:latest)
-          echo "digest=${DIGEST}" >> "$GITHUB_OUTPUT"
+          echo "image=ghcr.io/duyne-me/wolfi-melange:latest" >> $GITHUB_OUTPUT
+          echo "registry=${{ env.REGISTRY }}" >> $GITHUB_OUTPUT
+          echo "repository=${{ github.repository }}" >> $GITHUB_OUTPUT
 
-      - name: Sign image with cosign (keyless)
-        env:
-          COSIGN_EXPERIMENTAL: 1
-          COSIGN_YES: true
+      - uses: imjasonh/setup-crane@31b88efe9de28ae0ffa220711af4b60be9435f6e # v0.4
+
+      - id: digest
+        name: Get digests for image and platforms
+        shell: bash
         run: |
-          cosign sign ghcr.io/duyne-me/wolfi-melange@${{ steps.digest.outputs.digest }}
+          echo "digest=$(crane digest ${{ steps.vars.outputs.image }})" >> $GITHUB_OUTPUT
+          echo "digest-amd64=$(crane digest --platform=linux/amd64 ${{ steps.vars.outputs.image }})" >> $GITHUB_OUTPUT
+          echo "digest-arm64=$(crane digest --platform=linux/arm64 ${{ steps.vars.outputs.image }})" >> $GITHUB_OUTPUT
+
+      - name: Sign image
+        shell: bash
+        env:
+          COSIGN_YES: "true"
+          COSIGN_EXPERIMENTAL: "1"
+        run: |
+          cosign sign \
+            --recursive \
+            --oidc-provider=github-actions \
+            ${{ steps.vars.outputs.registry }}/${{ steps.vars.outputs.repository }}@${{ steps.digest.outputs.digest }}
