--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,14 @@
----
 version: 2
 updates:
   - package-ecosystem: "github-actions"
-    directory: ".github/"
+    directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "daily"
+    groups:
+      actions:
+        patterns:
+          - '*'
+    open-pull-requests-limit: 10
+    commit-message:
+      prefix: "chore(actions)"
+      include: "scope"
