--- a/.github/workflows/apko_build.yml
+++ b/.github/workflows/apko_build.yml
@@ -31,6 +31,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v5
 
+      - name: Import GPG key
+        uses: crazy-max/ghaction-import-gpg@v6
+        with:
+          gpg_private_key: ${{ secrets.BOT_GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.BOT_PASSPHRASE }}
+          git_user_signingkey: true
+          git_commit_gpgsign: true
+
       # https://github.com/chainguard-images/actions/tree/main/apko-publish
       - id: wolfi-renovate-nodejs-bash-git-flux
         uses: distroless/actions/apko-publish@main
