Change entrypoint command to use bash
Updated entrypoint command from '/usr/bin/yq' to '/usr/bin/bash'.

--- a/images/image-k8s-tools.yaml
+++ b/images/image-k8s-tools.yaml
@@ -19,7 +19,7 @@ environment:
   SSL_CERT_FILE: /etc/ssl/certs/ca-certificates.crt
 
 entrypoint:
-  command: /usr/bin/yq
+  command: /usr/bin/bash
 
 cmd: --version
 
