Update image-k8s-tools.yaml with additional packages
Added curl and tar packages to the image configuration.

--- a/images/image-k8s-tools.yaml
+++ b/images/image-k8s-tools.yaml
@@ -11,6 +11,8 @@ contents:
     - ca-certificates-bundle
     - coreutils
     - yq
+    - curl
+    - tar
     - kustomize
     - kubeconform@local
 
@@ -43,3 +45,4 @@ accounts:
 archs:
   - amd64
   - arm64
+
