Add busybox package to image-k8s-tools.yaml
Added busybox to the list of packages.

--- a/images/image-k8s-tools.yaml
+++ b/images/image-k8s-tools.yaml
@@ -12,7 +12,7 @@ contents:
     - coreutils
     - yq
     - curl
-    - tar
+    - busybox
     - kustomize
     - kubeconform@local
 
@@ -45,4 +45,5 @@ accounts:
 archs:
   - amd64
   - arm64
+
 
