--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -58,6 +58,13 @@ jobs:
           archs: x86_64,arm64
           sign-with-key: true
 
+      - name: Build flyway package with Melange
+        uses: chainguard-dev/actions/melange-build-pkg@main
+        with:
+          config: packages/package-flyway.yaml
+          archs: x86_64,arm64
+          sign-with-key: true
+
       - name: Upload packages
         uses: actions/upload-artifact@v6
         with:
@@ -87,7 +94,7 @@ jobs:
         uses: distroless/actions/apko-publish@main
         with:
           config: images/image-renovate.yaml
-          tag: ghcr.io/duynhne/renovate:latest
+          tag: ghcr.io/${{ github.repository_owner }}/renovate:latest
 
   build-apko:
     runs-on: ubuntu-latest
@@ -104,7 +111,7 @@ jobs:
         uses: distroless/actions/apko-publish@main
         with:
           config: images/image-apko.yaml
-          tag: ghcr.io/duynhne/apko:latest
+          tag: ghcr.io/${{ github.repository_owner }}/apko:latest
 
   build-docker-dind:
     runs-on: ubuntu-latest
@@ -121,7 +128,7 @@ jobs:
         uses: distroless/actions/apko-publish@main
         with:
           config: images/image-docker-dind.yaml
-          tag: ghcr.io/duynhne/docker-dind:latest
+          tag: ghcr.io/${{ github.repository_owner }}/docker-dind:latest
 
   build-aws-cli:
     runs-on: ubuntu-latest
@@ -138,7 +145,7 @@ jobs:
         uses: distroless/actions/apko-publish@main
         with:
           config: images/image-aws-cli.yaml
-          tag: ghcr.io/duynhne/aws-cli:latest
+          tag: ghcr.io/${{ github.repository_owner }}/aws-cli:latest
 
   build-kubectl:
     runs-on: ubuntu-latest
@@ -155,7 +162,7 @@ jobs:
         uses: distroless/actions/apko-publish@main
         with:
           config: images/image-kubectl.yaml
-          tag: ghcr.io/duynhne/kubectl:latest
+          tag: ghcr.io/${{ github.repository_owner }}/kubectl:latest
 
   build-k8s-tools:
     runs-on: ubuntu-latest
@@ -179,6 +186,28 @@ jobs:
         uses: distroless/actions/apko-publish@main
         with:
           config: images/image-k8s-tools.yaml
-          tag: ghcr.io/duynhne/k8s-tools:latest
+          tag: ghcr.io/${{ github.repository_owner }}/k8s-tools:latest
 
+  build-flyway:
+    runs-on: ubuntu-latest
+    needs: build-packages
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v6
 
+      - name: Download packages
+        uses: actions/download-artifact@v7
+        with:
+          name: packages
+          path: packages/
+
+      - name: Build flyway image
+        id: build-flyway
+        uses: distroless/actions/apko-publish@main
+        with:
+          config: images/image-flyway.yaml
+          tag: ghcr.io/${{ github.repository_owner }}/flyway:latest
