--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -5,14 +5,14 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'images/**'
+      - 'packages/**'
+      - '.github/workflows/build-images.yml'
   workflow_dispatch:
   schedule:
     # run every Monday at 01:30
     - cron: '30 1 * * 1'
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build-packages:
