--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -6,6 +6,9 @@ on:
       - main
     tags:
       - 'v*'
+    paths:
+      - 'packages/**'
+      - '.github/workflows/build_package.yml'
   workflow_dispatch:
   schedule:
     - cron: '30 1 * * 1' # Every Monday at 01:30
